Atualizacao em tempo real da classificacao